--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
   workflow_dispatch:
   schedule:
-    - cron: '42 5 * * *'
+    - cron: '0 3 * * 0'
 
 jobs:
   test:
@@ -13,9 +13,15 @@ jobs:
       fail-fast: false
       matrix:
         runner: [ubuntu-latest, macos-latest, windows-latest]
-        perl: [ '5.30', '5.36' ]
+        perl: [ '5.10', '5.30', '5.36' ]
         exclude:
           - runner: windows-latest
+            perl: '5.10'
+          - runner: windows-latest
+            perl: '5.36'
+          - runner: macos-latest
+            perl: '5.10'
+          - runner: macos-latest
             perl: '5.36'
 
     runs-on: ${{matrix.runner}}
@@ -33,10 +39,10 @@ jobs:
     - name: Show Perl Version
       run: |
         perl -v
+        cpanm -v
 
     - name: Install Dist::Zilla
       run: |
-        cpanm -v
         cpanm --notest Dist::Zilla
 
     - name: Install Modules
