--- a/dist.ini
+++ b/dist.ini
@@ -19,11 +19,19 @@ copyright_holder = Bartosz Jarzyna
 [PodSyntaxTests]
 [ExtraTests]
 
-[Git::Tag]
 [GitHub::Meta]
 
 [TestRelease]
 [ConfirmRelease]
+
+[NextRelease]
+time_zone=UTC
+format=%v %{eee MMM d yyyy}d
+
+[Git::Commit]
+commit_msg=Release %V
+[Git::Tag]
+
 [UploadToCPAN]
 
 [Prereqs]
